# balances-watcher

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.docker.md  README.md  docker-compose.yml  rustfmt.toml
.github/k8s/: cluster-issuer.yaml  deployment.yaml  ingress.yaml  service-monitor.yaml  service.yaml
.github/workflows/: build-and-deploy.yml  build-image.yml  code-checks.yml  deploy.yml  formatter-check.yml
configs/: tokens_list.json
prometheus/: prometheus.yml
src/: app_error.rs  app_state.rs  args.rs  main.rs  network_config.rs  token_api.rs
src/api/: balance.rs  balances.rs  create_session.rs  create_sse_session.rs  errors.rs  mod.rs  tokens_list.rs  update_session.rs
src/config/: constants.rs  errors.rs  mod.rs  network_config.rs  wrapped_address.rs
src/domain/: errors.rs  events.rs  mod.rs  network.rs  token.rs
src/evm/: erc20.rs  mod.rs  multicall.rs  multicall3.rs  networks.rs  token.rs  wrapped.rs
src/handlers/: mod.rs  tokens_list.rs
src/infra/: mod.rs
src/routes/: create_router.rs  mod.rs
src/services/: balance.rs  balances.rs  cleanup_stream.rs  errors.rs  fetch_balances_via_multicall.rs  mod.rs  subscription_manager.rs  token_list_fetcher.rs  tokens_from_list.rs  watcher.rs
src/tracing/: init_tracing.rs  mod.rs
