[package]
name = "token-balances-updater"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.6"
tokio = { version = "1.48.0", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["cors"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
tokio-stream = "0.1"
clap = { version = "4.5.51", features = ["env", "derive"] }
alloy = "1.1.0"
thiserror = "2.0.17"
